@@ -7,3 +7,7 @@
 2020/07/07
 ---
 - 实现了QuickSort
+
+2020/07/09
+---
+- 实现了FenwickTree / Binary Index Tree
